<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ed_himan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_age"
        app:layout_constraintBaseline_toBaselineOf="@+id/Age"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/et_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_height"
        app:layout_constraintBaseline_toBaselineOf="@+id/Height"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/et_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_weight"
        app:layout_constraintBaseline_toBaselineOf="@+id/Wight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_calculation"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/bt_calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wight" />

    <Button
        android:id="@+id/bt_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bt_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_calculation" />

    <EditText
        android:id="@+id/Wight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Height"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Age"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/et_age2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_age2"
        app:layout_constraintBaseline_toBaselineOf="@+id/Age"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/et_height2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_height2"
        app:layout_constraintBaseline_toBaselineOf="@+id/Height"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/et_weight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_weight2"
        app:layout_constraintBaseline_toBaselineOf="@+id/Wight"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/et_himan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/tv_human"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_taijuu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_taijuu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_himan" />

    <TextView
        android:id="@+id/et_tekisei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_tekisei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_taijuu" />

    <TextView
        android:id="@+id/et_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="144dp"
        android:text="@string/tv_kg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/teki_ans"
        app:layout_constraintTop_toBottomOf="@+id/et_tekisei" />

    <TextView
        android:id="@+id/teki_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_tekisei_ans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tekisei" />
</androidx.constraintlayout.widget.ConstraintLayout>